Fix alignment of exercise name when wrapping

--- a/stylesheets/exercises-package/stacks.less
+++ b/stylesheets/exercises-package/stacks.less
@@ -364,7 +364,7 @@ body {
 }
 
 .current-topic .skill-bar-title {
-    margin: 0;
+    margin: 0 0 0 25px;
 }
 
 .proficient-tick {
